# slurmboard

./: .gitignore  README.md  pyproject.toml  slurm_dashboard.py
slurm_dashboard/: __init__.py  __main__.py  app.py  config.py
slurm_dashboard/routes/: __init__.py  api.py  sse.py
slurm_dashboard/services/: __init__.py  logs.py  slurm.py
slurm_dashboard/static/css/: style.css
slurm_dashboard/static/js/: dashboard.js
slurm_dashboard/templates/: index.html
slurm_dashboard/utils/: __init__.py
