[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-dashboard"
version = "0.1.0"
description = "A lightweight web dashboard for monitoring Slurm HPC jobs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Johannes Roth"}
]
keywords = ["slurm", "hpc", "dashboard", "monitoring", "jobs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
slurm-dashboard = "slurm_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/jroth/slurm-dashboard"
Repository = "https://github.com/jroth/slurm-dashboard"
Issues = "https://github.com/jroth/slurm-dashboard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["slurm_dashboard*"]

[tool.setuptools.package-data]
slurm_dashboard = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
